[workspace]
resolver = "2"
members = [".", "arta-tokio"]
default-members = ["."]

[workspace.package]
authors = ["AlexSherbinin <alex.sherbinin.andr@gmail.com>"]
version = "0.1.1"
repository = "https://github.com/AlexSherbinin/arta"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]

[package]
name = "arta"
description = "Async runtime abstractions library"
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.30"
