[workspace]
resolver = "2"
members = [".", "arta-async-std", "arta-tokio"]
default-members = ["."]

[workspace.package]
authors = ["AlexSherbinin <alex.sherbinin.andr@gmail.com>"]
repository = "https://github.com/AlexSherbinin/arta"
readme = "README.md"
license = "MIT"
edition = "2021"
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]

[package]
name = "arta"
description = "Async runtime abstractions library"
authors.workspace = true
version = "0.2.0"
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.30"
