[package]
name = "arta-async-std"
description = "Async abstractions implementation for async-std"
authors.workspace = true
version = "0.2.1"
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
arta = { version = "^0.2", path = ".." }
async-std = { version = "1.12.0", features = ["unstable", "std"] }
cfg-if = "1.0.0"
futures = "0.3.30"
socket2 = "0.5.7"
