[package]
name = "arta-tokio"
description = "Async abstractions implementation for Tokio"
authors.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = ["time", "net", "fs", "rt", "process"]
time = ["tokio/time"]
net = ["tokio/net"]
fs = ["tokio/fs"]
rt = ["tokio/rt"]
process = ["tokio/process"]

[dependencies]
arta = { version = "0.1.0", path = ".." }
cfg-if = "1.0.0"
futures = "0.3.30"
pin-project-lite = "0.2.14"
static_assertions = "1.1.0"
tokio = { version = "^1" }
tokio-util = { version = "0.7.11", features = ["compat"] }
